# pyproject.toml

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=["asciifier"]

[project]
name = "Asciifier"
version = "1.0" # Start with an initial version
description = "Converts images into their ASCII art representation."
readme = "README.md" # Optional: Create a README file
authors = [
    { name = "Andrea Lavino", email = "andrealavino1410.2003@gmail.com" },
]
requires-python = ">=3.8" # Specify compatible Python versions
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: ASCII Art :: Image Conversion",
    "Environment :: Console",
]
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.57.0",
    "imageio==2.37.0",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "packaging==24.2",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tifffile==2025.3.30",
]

[project.urls]
"Homepage" = "https://github.com/Andrealavi/asciifier"

[project.scripts]
asciifier = "asciifier.asciifier:main"
